# esp32-s3-web-simulator

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Makefile  README.md  THIRD_PARTY.md  pyproject.toml
docs/: architecture.md  conformance.md  licensing.md  protocol.md  security.md  worker-isolation.md
emulator/qemu/: README.md  version.json
emulator/qemu/container/: Dockerfile
emulator/qemu/patches/: 0001-m25p80-support-gigadevice-qe-status.patch  0002-esp32s3-i2c-cardputer-tca8418.patch  0003-esp32s3-gpio-input-interrupts.patch  0004-esp32s3-gpspi-st7789.patch  0005-esp32s3-sticks3-octal-psram-qio.patch  0006-esp32s3-sticks3-buttons-imu-power.patch  0007-esp32s3-cardputer-adv-runtime.patch  0008-esp32s3-gpio-matrix-output.patch  (+3 more)
scripts/: build-qemu.sh  build-worker-image.sh  check-foundation.sh  probe-worker-sandbox.py  run-base-conformance.py
src/esp32_s3_simulator/: __init__.py  api.py  boards.py  broker_protocol.py  cli.py  firmware.py  framebuffer.py  gdb.py  inputs.py  oci.py  qemu.py  qmp.py  recording.py  sessions.py  settings.py  tracing.py  worker_broker.py  worker_process.py
tests/: test_api.py  test_boards.py  test_broker_protocol.py  test_firmware.py  test_framebuffer.py  test_gdb.py  test_inputs.py  test_oci.py  test_qemu.py  test_qmp.py  test_sessions.py  test_settings.py  test_tracing.py  test_worker_broker.py
web/: DESIGN.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.node.json  vite.config.ts
web/src/: App.test.tsx  App.tsx  styles.css
web/src/lib/: api.test.ts  (+11 more)
web/tests/: workbench.spec.ts
(+29 files in other folders)
